resources/app-sre/cincinnati-staging/cincinnati.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: cincinnati-policy-engine
  name: cincinnati-route-stg
spec:
  host: cc533os557xkwku.api.stage.openshift.com
  port:
    targetPort: policy-engine
  to:
    kind: Service
    name: cincinnati-policy-engine
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
